# WALKMAN_LRC

./: README.md  encoding.go  encoding_test.go  go.mod  lrcread.go  main.go
tauri-app/: package-lock.json  package.json  tauri-apps-cli-2.11.1.tgz
tauri-app/src/: index.html  index.html.artifact.json
tauri-app/src-tauri/: Cargo.toml  build.bat  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
