[package]
name = "lrc-proc-tauri"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["LRC Processor"]
description = "LRC 歌词时间戳修正工具"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
